...
                                <color key="backgroundColor" name="BackgroundImageColor"/>
                                <color key="tintColor" name="DefaultImageColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="profileImage"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="406-YV-ulb" secondAttribute="height" multiplier="1:1" id="H3p-my-4rc"/>
...
                                <rect key="frame" x="78" y="497.33333333333331" width="258" height="153.66666666666669"/>
                                <color key="backgroundColor" name="BackgroundColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="aboutMeTextField"/>
                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla paria
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <rect key="frame" x="0.0" y="435" width="414" height="30.333333333333314"/>
                                <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="nameTextField"/>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
...
                                <rect key="frame" x="265.33333333333331" y="321.33333333333331" width="81.666666666666686" height="81.666666666666686"/>
                                <color key="backgroundColor" name="CameraButtonColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="editPhotoButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="ovk-pa-pTs" secondAttribute="height" multiplier="1:1" id="fk9-zw-JrX"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kbm-hq-M2p">
                                <rect key="frame" x="352" y="61.666666666666657" width="45" height="33"/>
                                <accessibility key="accessibilityConfiguration" identifier="closeProfileButton"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                <color key="tintColor" name="BlueTextColor"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MEh-Ls-Fvu">
                                <rect key="frame" x="15.999999999999993" y="62.333333333333336" width="121.33333333333331" height="31.333333333333336"/>
                                <accessibility key="accessibilityConfiguration" identifier="profileTitle"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="302" height="40"/>
                                        <color key="backgroundColor" name="BackgroundButtonColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="editButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="lxn-oY-16c"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="302" height="40"/>
                                        <color key="backgroundColor" name="BackgroundButtonColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="cancelButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="hYZ-PV-YfT"/>
...
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Cancel"/>
                                        <connections>
                                            <action selector="cancelButtonPressed:" destination="L8r-NT-LYG" eventType="touchUpInside" id="ozt-a1-JiP"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="302" height="40"/>
                                        <color key="backgroundColor" name="BackgroundButtonColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="saveButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="6sj-gc-VWE"/>
...
