...
        ])
        
        tableView.translatesAutoresizingMaskIntoConstraints = false
    }
    
    func configureNavigationTitle(navigationItem: UINavigationItem, navigationController: UINavigationController?) {
        navigationItem.title = "Channels"
        navigationController?.navigationBar.prefersLargeTitles = true
    }
    
    func getNavigationButton(name: String) -> UIButton {
        let settingsButton = UIButton(frame: CGRect(x: 0, y: 0, width: Const.sizeOfSettingsNavigationButton,
                                                    height: Const.sizeOfSettingsNavigationButton))
...
